# sockudo-client

./: .gitattributes  .gitignore  Cargo.toml  QUICK_START.md  README.md  README_WASM_TESTS.md  WASM_API_SUMMARY.md  build-wasm.ps1  build-wasm.sh  build.rs  build.sh  emcc-wrapper.rs  fix-wasm-exports.ps1  flutter_rust_bridge.yaml  run-integration-tests.ps1  setup-emsdk.ps1  test-wasm.sh
.cargo/: config.toml
examples/: basic.rs  presence.rs  signal_handling.rs
examples/browser/: README.md  index.html  serve.js  serve.ps1  serve.py  serve.sh  test-delta.html  test.html
flutter/: pubspec.yaml
flutter/example/lib/: main.dart
flutter/lib/: sockudo_client.dart
flutter/lib/src/: sockudo_client.dart
flutter/lib/src/bridge_generated.dart/: flutter_api.dart  flutter_api.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
nodejs/: example-wasm.js  package-lock.json  package.json  test-basic.js  test-real-connection.js  test-summary.js
src/: auth.rs  error.rs  ffi_callbacks.rs  ffi_types.rs  flutter_api.rs  lib.rs  options.rs  pusher.rs  wasm.rs
src/channels/: channel.rs  channels.rs  encrypted_channel.rs  members.rs  mod.rs  presence_channel.rs  private_channel.rs
src/connection/: manager.rs  mod.rs  state.rs
src/delta/: channel_state.rs  decoders.rs  manager.rs  mod.rs  types.rs
src/events/: callback.rs  dispatcher.rs  mod.rs
src/protocol/: filter.rs  message_types.rs  mod.rs
src/transports/: mod.rs  native.rs  transport.rs  wasm.rs
src/utils/: collections.rs  mod.rs  signals.rs  timers.rs
tests/: INTEGRATION_TESTS_README.md  WASM_TESTING_README.md  WASM_TEST_SUITE.md  integration_delta_compression.rs  integration_test.rs  minimal_wasm_test.rs  wasm_comprehensive_tests.rs  wasm_delta_compression.rs  wasm_test_runner.html
tests/interactive/: DELTA_FIX_TESTING.md  package-lock.json  package.json  rebuild-client.sh  server.js
tests/interactive/public/: app.js  bundle-entry.js  comprehensive-test.html  conflation-test.html  conflation-test.js  delta-compression.js  event-binding-test.html  index.html  pusher-local.js
